--- a/.gitignore
+++ b/.gitignore
@@ -3,5 +3,10 @@ dogImages/
 lfw/
 saved_models/weights.best.from_scratch.hdf5
 saved_models/weights.best.vgg16.hdf5
+saved_models/weights.best.Xception.hdf5
 .ipynb_checkpoints/
 bottleneck_features/DogVGG16Data.npz
+bottleneck_features/DogResnet50Data.npz
+bottleneck_features/DogXCeptionData.npz
+bottlenect_features/DogInceptionV3Data.npz
+
